# file1

./: .gitignore  README.md  README_CN.md  pyproject.toml
eval/: models.json  swe_test.sh  swebench.yaml  swebench_file1.py  swebench_file1_test.py
eval/SWE-bench/: openai__glm-4.5-air.eval-glm-4.5-air.json
eval/mini-swe-agent/: README.md
examples/: test_file_manager.py
examples/test_repo/: data.csv  main.py  main_improved.py  simulate_data.py
file1/: __init__.py  config.py  file_manager.py  file_summary.py  vision.py
file1/reranker/: __init__.py  api_reranker.py
file1/utils/: __init__.py  vision.py  visualization.py
file1/vision/: base_vlm.py  openai_vlm.py
file1agent/: config.py  file_manager.py
file1agent/reranker/: api_reranker.py
file1agent/utils/: base.py  file_inclusion.py  file_summary.py
sample_files/: config.ini  data.json  readme.md
